--- a/css/main.css
+++ b/css/main.css
@@ -7,27 +7,43 @@ header {
 	font-family: 'Dancing Script', cursive; 
 	text-align: center;
 	font-size: 1.3em;
+	display: flex;
+	justify-content: space-between;
+	margin: auto 30px;
 }
 
+.scoreBox {
+	height: 40px;
+	width: 80px;
+	font-size: 1em;
+}
+
+.displayScore {
+	height: 28px;
+	width: 80px;
+	border: 1px solid black;
+}
+
+
 .cell {
-	height: 130px;
-	width: 130px;
-	border: 1px black solid;
+	height: 120px;
+	width: 120px;
+	border: 1px white solid;
 	padding: 0;
 	display: inline-block;
 	margin: auto;
 	float: left;
 	text-align: center;
 	vertical-align: middle;
-	line-height: 130px;
-	font-family: 'PT Sans Italic', cursive;
-	font-size: 1em;
+	line-height: 120px;
+	font-family: 'Maven Pro', sans-serif;
+	font-size: 0.8em;
 	color: black;
 
 }
 
-#board {
-	display:flex;
+#board { 
+	display: flex;
 	justify-content: center;
 	margin: auto 30px;
 
