--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,18 @@ header {
 	color: white;
 	font-family: 'Dancing Script', cursive; 
 	text-align: center;
-	font-size: 1.3em;
+	font-size: 1.5em;
 	display: flex;
 	justify-content: space-between;
 	margin: auto 30px;
+	max-width: 100%
+	padding-bottom: 0;
+}
+
+#stop {
+	height: 30px;
+	width: 80px;
+	margin-top: 35px;
 }
 
 .scoreBox {
@@ -23,12 +31,13 @@ header {
 	height: 28px;
 	width: 80px;
 	border: 1px solid black;
+	font-family: 'Maven Pro', serif;
 }
 
 
 .cell {
-	height: 120px;
-	width: 120px;
+	height: 110px;
+	width: 110px;
 	border: 1px white solid;
 	padding: 1px;
 	display: inline-block;
@@ -49,6 +58,7 @@ header {
 	margin: auto 30px;
 
 }
+
 
 .row {
 	width: 264px;
