--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,10 @@ header {
 	padding-bottom: 0;
 }
 
+#playerOneScore {
+	color:red;
+}
+
 #stop {
 	height: 30px;
 	width: 80px;
@@ -59,6 +63,16 @@ header {
 
 }
 
+ul li {
+	list-style-type: none;
+	text-align: center;
+}
+
+span {
+	display:block;
+	position: center;
+}
+
 
 .row {
 	width: 264px;
@@ -71,3 +85,6 @@ img {
 	max-width: 100%;
 	max-height: 100%;
 }
+
+
+
