--- a/css/main.css
+++ b/css/main.css
@@ -9,19 +9,9 @@ header {
 	font-size: 1.5em;
 	display: flex;
 	justify-content: space-between;
-	margin: auto 30px;
+	margin: 0 100px 0 59px;
 	max-width: 100%
 	padding-bottom: 0;
-}
-
-#playerOneScore {
-	color:red;
-}
-
-#stop {
-	height: 30px;
-	width: 80px;
-	margin-top: 35px;
 }
 
 .scoreBox {
@@ -30,6 +20,8 @@ header {
 	font-size: 1em;
 	color:black;
 }
+
+
 
 .displayScore {
 	height: 28px;
@@ -44,12 +36,11 @@ header {
 	width: 110px;
 	border: 1px white solid;
 	padding: 1px;
-	display: inline-block;
 	margin: auto;
 	float: left;
 	text-align: center;
 	vertical-align: middle;
-	line-height: 120px;
+	line-height: 95px;
 	font-family: 'Maven Pro', sans-serif;
 	font-size: 0.8em;
 	color: black;
@@ -58,7 +49,6 @@ header {
 
 #board { 
 	display: flex;
-	justify-content: center;
 	margin: auto 30px;
 
 }
@@ -87,4 +77,23 @@ img {
 }
 
 
+@media only screen and (max-width: 640px) {
+    
 
+    body {
+    	background-color: powderblue;
+    }
+
+    header {
+    	max-width: 500px;
+    }
+    
+    .row {
+    	width: 500px;
+    	margin:30px;
+    }
+
+    #board {
+    	display: block;
+    }
+}
